updated bug fix where visitors are miscalculated

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -139,6 +139,7 @@ input {
 	padding: 30px;
 	font-size: 29px;
 	width: 90%;
+	color: white;
 }
 
 #total_cost_container div {
@@ -149,7 +150,6 @@ input {
 
 #total_cost_container p {
 	display: inline-block;
-	color: #f7581e;
 }
 
 #total_cost_container input {
@@ -157,6 +157,7 @@ input {
 	display: inline-block;
 	font-size: 29px;
 	width: 190px;
+	color: white;
 }
 
 
