--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -417,7 +417,7 @@ p.calculation_header {
 	color: #40B549;
 	width: 89%;
 	border-radius: 6px;
-	padding-left: 1em;
+	padding: 1em;
 	font-size: 165%;
 }
 
