--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -14,6 +14,11 @@
 	.container #traffic_sources_container {
 		text-align: center;
 	}
+
+	.color_box {
+		min-width: 111px;
+	}
+	
 }
 
 @media screen and (min-width: 600px) and (max-width: 1576px) { 
