--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -337,7 +337,7 @@
 				  <input class="total_value_per_action" type="number"  value="50000">
 			  </div>
 
-			  <div style="display: inline-block;" id="total_value_container">
+			  <div id="total_value_container">
 			  	<p>Total Value</p><input type="number" id="total_roi" value="200000">
 			  </div>
 		</div>
