--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -35,6 +35,10 @@
 		display: block;
 		width: 90%;
 	}
+
+	#total_cost_container {
+		max-width: 251px;
+	}
 }
 
 @media screen and (min-width: 600px) and (max-width: 1576px) { 
@@ -227,6 +231,7 @@ input {
 	font-size: 29px;
 	width: 90%;
 	color: white;
+
 }
 
 #total_cost_container div {
